--- a/package.json
+++ b/package.json
@@ -10,37 +10,38 @@
     "format": "eslint . --fix"
   },
   "dependencies": {
+    "@cosmjs/amino": "^0.29.5",
     "@cosmjs/cosmwasm-stargate": "^0.29.5",
     "@cosmjs/proto-signing": "^0.29.5",
     "@cosmjs/stargate": "^0.29.5",
-    "@dao-dao/i18n": "2.1.0-rc.3",
-    "@dao-dao/stateful": "2.1.0-rc.3",
-    "@dao-dao/stateless": "2.1.0-rc.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.3",
+    "@mui/material": "^5.11.10",
     "@next/font": "13.1.1",
-    "@noahsaso/cosmodal": "^0.8.2",
+    "@noahsaso/cosmodal": "^0.8.3",
     "@types/node": "18.11.18",
     "clsx": "^1.2.1",
-    "i18next": "^21.8.10",
-    "next": "12.2.6",
-    "next-transpile-modules": "^10.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-hook-form": "7.20.4",
-    "react-hot-toast": "^2.1.1",
-    "react-i18next": "^11.0.0",
-    "typescript": "4.9.4"
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
-    "@dao-dao/config": "2.1.0-rc.3",
-    "@dao-dao/types": "2.1.0-rc.3",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.13",
-    "eslint-config-next": "^13.1.1",
+    "eslint": "^8.23.1",
+    "eslint-config-next": "^13.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-tailwindcss": "^3.6.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-  },
-  "prettier": "@dao-dao/config/prettier"
+    "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
+  }
 }
