--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.3",
+    "react-timeago": "^7.1.0",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.11",
+    "@types/react-timeago": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.13",
