--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "18.11.18",
     "clsx": "^1.2.1",
     "next": "^13.1.6",
+    "next-seo": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
